Message page completed.

--- a/client/src/app/components/action-button/action-button.component.scss
+++ b/client/src/app/components/action-button/action-button.component.scss
@@ -228,6 +228,18 @@
   font-family: "Poppins", sans-serif;
   display: inline-block;
 }
+
+:host-context(.message-send-btn) button {
+  line-height: initial;
+  padding: 5px 30px !important;
+  font-weight: 500;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  display: inline-block;
+  line-height: normal;
+  margin-top: 14px;
+}
+
 @media only screen and (max-width: $tablet-breakpoint) {
   :host-context(.position-search-reload-result)button {
     padding: 4px 13px !important;
