Add editing functionalities

--- a/client/src/app/pages/company/company-detail/company-detail.component.html
+++ b/client/src/app/pages/company/company-detail/company-detail.component.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="company-status">
-          <action-button type="flat" color="primary" title="Edit" (click)="onClickEdit()"></action-button>
+          <action-button class="company-edit-btn" type="flat" color="primary" title="Edit" (click)="onClickEdit()"></action-button>
         </div>
       </div>
 
