Message page bugs resolved.

--- a/client/src/app/pages/application/application-detail/messages/messages.component.scss
+++ b/client/src/app/pages/application/application-detail/messages/messages.component.scss
@@ -33,6 +33,12 @@
         &::-webkit-scrollbar {
           width: 0 !important;
         }
+        div{
+          overflow-x: auto;
+          &::-webkit-scrollbar {
+            width: 0 !important;
+          }
+        }
 
         img {
           width: 25px;
