--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -219,10 +219,7 @@
         <div class="row" [ngClass]="{'selected': job.selected}">
           <round-checkbox id="test" [checked]="job.selected"
             (statusChange)="job.selected = !job.selected;selectedAllFlag=false;"></round-checkbox>
-
-          <h1  [routerLink]="['/position-info/',job.position_id]" >{{job.position}} </h1>
-          <!-- <h1 [routerLink]="['/positions/position-info/',job.position_id]">{{job.position}} </h1> -->
-
+          <h1 [routerLink]="['position-info/',job.position_id]">{{job.position}} </h1>
           <div class="position-right">
             <div class="heart-icon">
               <img *ngIf="!appliedJobsMap[job.position_id] && !savedJobsMap[job.position_id]" (click)="saveJob([job])"
@@ -242,7 +239,8 @@
               <button mat-button [matMenuTriggerFor]="menu" disableRipple><img src="assets/icons/ic_more_vertical.svg">
               </button>
               <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="routerNavigate(this.appliedJobsMap[job.position_id], job.position_id)">See
+                <button mat-menu-item
+                  (click)="routerNavigate(this.appliedJobsMap[job.position_id], job.position_id)">See
                   Application</button>
                 <button mat-menu-item (click)="withdrawApplication(job.position_id)">Withdraw
                   Application</button>
@@ -313,7 +311,8 @@
                     *ngIf="job.minimum_skills; else noSkills">
                     <div class="skills-preferred-m" *ngFor="let min_skill of job.minimum_skills ">
                       <simple-tag type="gray" title="{{min_skill.skill}}" ellipseTag="true"
-                        value="{{min_skill.skill_level}}" (click)="openSkilladdDialog(min_skill)"[matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
+                        value="{{min_skill.skill_level}}" (click)="openSkilladdDialog(min_skill)"
+                        [matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
                         [matTooltipShowDelay]=500>
                       </simple-tag>
                     </div>
@@ -326,7 +325,8 @@
                     *ngIf="job.preferred_skills; else noSkills">
                     <div class="skills-preferred-m skill-prefer" *ngFor="let preskill of job.preferred_skills">
                       <simple-tag type="gray" title="{{preskill.skill}}" ellipseTag="true"
-                        value="{{preskill.skill_level}}" (click)="openSkilladdDialog(preskill)"[matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
+                        value="{{preskill.skill_level}}" (click)="openSkilladdDialog(preskill)"
+                        [matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
                         [matTooltipShowDelay]=500>
                       </simple-tag>
                     </div>
@@ -343,21 +343,30 @@
               <div class="qualification-level-m">
                 <h5>Qualification Level Estimate Breakdown</h5>
                 <simple-tag *ngIf="job.true_fitscore_info?.skills_weight" type="gray" title="Skills Match"
-                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.skills_fitscore)}}" matTooltip="{{job.true_fitscore_info?.skills_fitscore*100}}% of skills match" [matTooltipShowDelay]=500>
+                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.skills_fitscore)}}"
+                  matTooltip="{{job.true_fitscore_info?.skills_fitscore*100}}% of skills match"
+                  [matTooltipShowDelay]=500>
                 </simple-tag>
                 <simple-tag *ngIf="job.minimum_skills" type="gray" title="Required Skills Match" ellipseTag="true"
-                  value="{{mathFloor(6*job.true_fitscore_info?.required_skills_fitscore)}}" matTooltip="{{job.true_fitscore_info?.required_skills_fitscore*100}}% of required skills match" [matTooltipShowDelay]=500>
+                  value="{{mathFloor(6*job.true_fitscore_info?.required_skills_fitscore)}}"
+                  matTooltip="{{job.true_fitscore_info?.required_skills_fitscore*100}}% of required skills match"
+                  [matTooltipShowDelay]=500>
                 </simple-tag>
                 <simple-tag *ngIf="job.true_fitscore_info?.experience_weight" type="gray" title="Experience Match"
-                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.experience_fitscore)}}" matTooltip="{{job.true_fitscore_info?.experience_fitscore*100}}% of experience match" [matTooltipShowDelay]=500>
+                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.experience_fitscore)}}"
+                  matTooltip="{{job.true_fitscore_info?.experience_fitscore*100}}% of experience match"
+                  [matTooltipShowDelay]=500>
                 </simple-tag>
                 <simple-tag *ngIf="job.true_fitscore_info?.education_weight" type="gray" title="Education Match"
-                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.education_fitscore)}}" matTooltip="{{job.true_fitscore_info?.education_fitscore*100}}% of education match" [matTooltipShowDelay]=500>
+                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.education_fitscore)}}"
+                  matTooltip="{{job.true_fitscore_info?.education_fitscore*100}}% of education match"
+                  [matTooltipShowDelay]=500>
                 </simple-tag>
                 <simple-tag *ngIf="job.true_fitscore_info?.interests_weight" type="gray" title="Interests Match"
-                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.interests_fitscore)}}" matTooltip="{{job.true_fitscore_info?.interests_fitscore*100}}% of interests match" [matTooltipShowDelay]=500>
+                  ellipseTag="true" value="{{mathFloor(6*job.true_fitscore_info?.interests_fitscore)}}"
+                  matTooltip="{{job.true_fitscore_info?.interests_fitscore*100}}% of interests match"
+                  [matTooltipShowDelay]=500>
                 </simple-tag>
-
                 <p
                   *ngIf="!job.true_fitscore_info ||  (job.true_fitscore_info && !job.true_fitscore_info.skills_weight && !job.true_fitscore_info.experience_weight && !job.true_fitscore_info.education_weight && !job.true_fitscore_info.interests_weight && !job.minimum_skills)">
                   N/A
@@ -376,7 +385,7 @@
                     'Show Less'}}" color="primary" (click)="job.showMoreFlag = !job.showMoreFlag"></action-button>
             &nbsp;&nbsp;
             <action-button type="text" title="Go to Details Page" color="primary"
-            [routerLink]="['/position-info/',job.position_id]" *ngIf="job.showMoreFlag"></action-button>
+              [routerLink]="['position-info/',job.position_id]" *ngIf="job.showMoreFlag"></action-button>
           </div>
         </div>
       </div>
