--- a/client/src/app/pages/profile/user-profile/references-section/references-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/references-section/references-section.component.scss
@@ -157,12 +157,17 @@
     width: 350px;
     margin: 10px 20px 5px 0;
     position: relative;
-    img {
-      grid-area: image;
+    .img-box{
       width: 70px;
       height: 70px;
-      border-radius: 50%;
-    }
+
+      img {
+        grid-area: image;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+      }
+  }
     label {
       grid-area: title;
       font-size: 16px;
