Hide back button in company detail page

--- a/client/src/app/pages/company/company-detail/company-detail.component.html
+++ b/client/src/app/pages/company/company-detail/company-detail.component.html
@@ -28,7 +28,7 @@
     </legend>
 
     <div class="header-container">
-      <div class="back-row">
+      <div *ngIf="showBackButton" class="back-row">
         <action-button class="back-btn" type="stroked" title="Go Back" (click)="backToCompaniesPage()"></action-button>
       </div>
 
