--- a/client/src/app/components/action-button/action-button.component.scss
+++ b/client/src/app/components/action-button/action-button.component.scss
@@ -238,6 +238,7 @@
   display: inline-block;
   line-height: normal;
   margin-top: 14px;
+  box-shadow: none;
 }
 
 @media only screen and (max-width: $tablet-breakpoint) {
