--- a/client/src/app/pages/application/application-detail/messages/messages.component.html
+++ b/client/src/app/pages/application/application-detail/messages/messages.component.html
@@ -1,25 +1,27 @@
-<div class="application-messagebox">
-  <div class="row">
+<div class="application-messagebox" >
+  <div class="row" >
     <ng-container *ngIf="isJobLoading">
       <div class="loading">
         <mat-spinner></mat-spinner>
         <h4>Loading...</h4>
       </div>
     </ng-container>
-    <div>
-      <div class="send" #chatbox>
-        <div *ngIf="chatRoom$ | async as chat">
+    <div >
+      <div class="send" >
+        <div *ngIf="chatRoom$ | async as chat" id="sidenav" >
+            <div class="chat"   >
           <div class="msg" *ngFor="let msg of chat.messages; trackBy: trackByCreated">
             <p class="right-user" *ngIf="msg.user.user_id === currentUser"><span>{{ msg.content }}</span> <img
-                [src]="msg.user.photo ? msg.user.photo : 'assets/icons/no_photo.png' "></p>
-            <p class="left-user" *ngIf="msg.user.user_id === recruiterUserId"> <img
-                [src]="msg.user.photo ? msg.user.photo : 'assets/icons/no_photo.png' "> <span>{{ msg.content }}</span>
+                [src]="msg.user.photo ? msg.user.photo : 'assets/icons/no_photo.png' " ></p>
+            <p class="left-user" *ngIf="msg.user.user_id === recruiterUserId"   > <img
+                [src]="msg.user.photo ? msg.user.photo : 'assets/icons/no_photo.png' " > <span>{{ msg.content }}</span>
             </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="message-form">
+    <div class="message-form" >
       <div class="textarea-content">
         <mat-form-field floatLabel="never">
           <input matInput placeholder="Type a message..." type="text" [(ngModel)]="newMessage" autocomplete="off">
