company link added.

--- a/client/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/client/src/app/components/main-toolbar/main-toolbar.component.html
@@ -63,7 +63,7 @@
         </button>
       </ng-container>
 
-      <a routerLink="" class="logo-href">
+      <a routerLink="read-more" class="logo-href">
         <img src="assets/icons/ic_cf_logo.svg">
       </a>
 
