Company link added.

--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
@@ -107,19 +107,27 @@
           <h3>Qualification Level Estimate Breakdown</h3>
           <div class="position-qualification-skills" *ngFor="let score of positionName">
             <simple-tag *ngIf="score.true_fitscore_info?.skills_weight" type="gray" title="Skills Match"
-              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.skills_fitscore)}}">
+              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.skills_fitscore)}}"
+              matTooltip="Skills Match: {{(score.true_fitscore_info?.skills_fitscore*100)| number : '2.0' }}%" [matTooltipShowDelay]=500>
             </simple-tag>
             <simple-tag *ngIf="score.minimum_skills" type="gray" title="Required Skills Match" ellipseTag="true"
-              value="{{mathFloor(6*score.true_fitscore_info?.required_skills_fitscore)}}">
+              value="{{mathFloor(6*score.true_fitscore_info?.required_skills_fitscore)}}"
+              matTooltip="Required Skills Match: {{(score.true_fitscore_info?.required_skills_fitscore*100) | number : '2.0' }}%"
+              [matTooltipShowDelay]=500>
             </simple-tag>
             <simple-tag *ngIf="score.true_fitscore_info?.experience_weight" type="gray" title="Experience Match"
-              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.experience_fitscore)}}">
+              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.experience_fitscore)}}"
+              matTooltip="Experience Match: {{(score.true_fitscore_info?.experience_fitscore*100)| number : '2.0'}}%"
+              [matTooltipShowDelay]=500>
             </simple-tag>
             <simple-tag *ngIf="score.true_fitscore_info?.education_weight" type="gray" title="Education Match"
-              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.education_fitscore)}}">
+              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.education_fitscore)}}" matTooltip="Education Match: {{(score.true_fitscore_info?.education_fitscore*100)| number : '2.0'}}%"
+              [matTooltipShowDelay]=500>
             </simple-tag>
             <simple-tag *ngIf="score.true_fitscore_info?.interests_weight" type="gray" title="Interests Match"
-              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.interests_fitscore)}}">
+              ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.interests_fitscore)}}"
+              matTooltip="Interests Match: {{(score.true_fitscore_info?.interests_fitscore*100)| number : '2.0'}}%"
+              [matTooltipShowDelay]=500>
             </simple-tag>
 
             <p
