--- a/client/src/app/pages/application/application-search-page/applications.component.html
+++ b/client/src/app/pages/application/application-search-page/applications.component.html
@@ -260,7 +260,8 @@
               <ul>
                 <li>
                   <img class="img-style" src="assets/icons/ic_company.svg">
-                  <span class="image" routerLink="../company-page/{{application.company_id}}">
+                  <span class="image" [routerLink]="['/company-info/']"
+                  [queryParams]="{id: application.company_id}">
                     {{application.company_name}}</span>
                 </li>
                 <li>
