--- a/client/src/app/pages/company/companies/companies.component.html
+++ b/client/src/app/pages/company/companies/companies.component.html
@@ -20,7 +20,7 @@
                 <mat-autocomplete #autocompleteSearch="matAutocomplete">
                     <a *ngFor="let company of autocomplete_searchcompanies | slice:0:4"
                         [routerLink]="['/company-info']"
-                        [queryParams]="{id: company.company_id}">
+                        [queryParams]="{id: company.company_id, tabIndex: 0, showBackButton: false}">
                         <mat-option [value]="company.company_name">
                             <img class="company-autocomplete-logo" [src]="company.company_logo ? company.company_logo : 'assets/icons/ic_default_company_logo.svg'">
                             <span>{{company.company_name}}</span>
@@ -109,7 +109,7 @@
                                         [src]="company.company_logo ? company.company_logo : 'assets/icons/ic_default_company_logo.svg'"></div>
                                 <div class="info">
                                     <a [routerLink]="['/company-info/']"
-                                        [queryParams]="{id: company.company_id}">
+                                        [queryParams]="{id: company.company_id, tabIndex: 0, showBackButton: false}">
                                         <h2 class="name">{{company.company_name}}</h2>
                                     </a>
                                     <h3 *ngIf="company.hq_city || company.hq_state" class="title">
