--- a/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.html
+++ b/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.html
@@ -62,7 +62,7 @@
     <h3> Work Experience </h3>
     <ng-container *ngFor="let experience of experienceList; let i = index;">
       <div class="editor-container">
-        <a class="name-field" *ngIf="experience.company_id" [routerLink]="['/company-info/', experience.company_id]">{{experience.company_name }}</a>
+        <a class="name-field" *ngIf="experience.company_id" [routerLink]="['/company-info']" [queryParams]="{id: experience.company_id, tabIndex: 0, showBackButton: false}">{{experience.company_name }}</a>
         <a class="name-field" *ngIf="!experience.company_id">{{experience.user_specified_company_name}}</a>
         <mat-icon *ngIf="editMode" class="btn-edit" (click)="openDialog('Work Experience', experienceList, i)">edit
         </mat-icon>
